internal/xds/translator/testdata/out/xds-ir/http-route-multiple-backendrefs-some-without-endpoints.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/*
    routes:
    - match:
        path: /com.example/Example
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: GRPCRoute
              name: grpcroute-1
              namespace: default
      name: grpcroute/default/grpcroute-1/rule/0/match/0/*
      route:
        cluster: grpcroute/default/grpcroute-1/rule/0
    - match:
        pathSeparatedPrefix: /mixed-invalid-and-without-endpoints
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/1/match/0/*
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: invalid-backend-cluster
            weight: 1
          - name: httproute/default/httproute-1/rule/1/backend/0
            weight: 1
    - match:
        pathSeparatedPrefix: /some-without-endpoints
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/*
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
    - directResponse:
        status: 503
      match:
        pathSeparatedPrefix: /all-without-endpoints
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/2/match/0/*
